# devnet

./: .gitignore  README.md  flake.nix  pyproject.toml  requirements.txt
catalyst/: netconf.py  restconf.py  ssh.py
devnet/: common.py
devnet/catalyst/: netconf.py  restconf.py  ssh.py
devnet/dnac/: dnac_api.py
devnet/meraki/: meraki_api.py
sdwan/: sdwan_api.py
